--- a/src/assets/styles/layouts/_home.scss
+++ b/src/assets/styles/layouts/_home.scss
@@ -1,57 +1,61 @@
-* {
-  box-sizing: border-box;
-}
+
 
 body {
-  display: flex;
-  flex-direction: column;
-  height: 100vh;
-  margin: 0;
+  width: 100%;
+  margin: 0 auto;
   padding: 2rem;
-  font-family: $font-family-sans-serif;
-  font-size: 16px;
-  line-height: 24px;
-  background-color: $uoc-bg;
-  color: $uoc-corporate;
+  font-family: $font-family;
+  background-color: $color-background;
+  color: $color-primary;
+  
 }
 
-.uoc-container {
-  max-width: 800px;
-  margin: auto;
-  padding: 2rem;
-  border-radius: 2rem;
-  text-align: center;
-  background-color: #fff;
-  box-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1),
-    0 2px 4px -1px rgba(0, 0, 0, 0.06);
-}
 
-.uoc-logo {
-  display: block;
-  margin-left: auto;
-  margin-right: auto;
-  margin-bottom: 1.5rem;
-  max-width: 200px;
-  height: auto;
 
-  @media (min-width: $mqMinWidth) {
-    max-width: none;
+  h1,
+  h2 {
+    text-align: center;
   }
-}
 
-.uoc-title {
-  font-family: $font-family-serif;
-  font-size: 24px;
-  font-weight: 700;
-  color: $uoc-corporate;
 
-  @media (min-width: $mqMinWidth) {
-    font-size: 36px;
+
+  .header__nav {
+    display: flex; 
+    justify-content: space-evenly; 
+    background-color: $color-primary; 
+    padding: 1rem; 
   }
-}
+  
+  .nav__list {
+    display: flex; 
+    flex-direction: column;
+    list-style: none; 
+    padding: 0;
+    margin: 0;
+  }
+  
+  .nav__item {
+    margin: 0 0.5rem; 
+  }
+  
+  .nav__link {
+    color: $color-accent;
+    text-decoration: none; 
+    padding: 0.5rem; 
+  
+    &:hover {
+      color: $color-background;
+    }
+  }
+  
+  @media (min-width: 768px) {
+    .header__nav .nav__list {
+      flex-direction: row; 
+      align-items: center; 
+    }
+  }
 
-.uoc-footer {
-  margin-top: 1.5rem;
-  font-size: 0.75rem;
-  text-align: center;
+
+.footer {
+  margin-bottom: 2rem;
 }
