--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -1,30 +1,22 @@
-/**
- * Use this file to import partials.
- * Do not include SCSS code in this file.
- */
+@import 'abstracts/functions';
+@import 'abstracts/mixins';
 
-/**
- * Import variables
- */
 
-@import "variables";
+@import "base/typography";
+@import "base/reset";
 
-/**
- * Import npm dependencies
- * see: https://v2.parceljs.org/features/module-resolution/
- * see commented examples below
- */
 
-// @import "some-node-module";
-// @import "@some-company/some-node-module";
+@import "components/buttons";
 
-/**
- * Import layouts
- * It's a best practice to use a different partial for each page
- */
 
 @import "layouts/home";
+@import "layouts/gallery";
 
-/**
- * Do NOT include anything else in this file!
- */
+
+@import "npm:@fortawesome/fontawesome-free/css/all.css";
+
+
+
+
+
+
