--- a/src/views/footer.html
+++ b/src/views/footer.html
@@ -1,3 +1,3 @@
-<footer class="uoc-footer">
-    &copy; Universitat Oberta de Catalunya
-</footer>
+<footer class="footer">
+    <p>&copy; 2024 Atenas. Todos los derechos reservados.</p>
+  </footer>
